[package]
name = "xaml_xml"
version = "0.1.0"
authors = ["joe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
raw-window-handle = "0.3"
# winrt = "0.7"
winrt = { git = "https://github.com/microsoft/winrt-rs" }
bindings = { path = "./bindings"}
rand = "0.7"